--- a/package.json
+++ b/package.json
@@ -13,22 +13,24 @@
   "author": "Jon Kim",
   "license": "ISC",
   "dependencies": {
+    "babel-core": "^6.1.21",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
     "immutable": "^3.7.5",
     "install": "^0.8.1",
     "npm": "^3.10.6",
-    "react": "^0.14.2",
+    "react": "^0.14.8",
     "react-bootstrap": "^0.30.3",
     "react-bootstrap-datetimepicker": "0.0.22",
     "react-dom": "^0.14.2",
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
-    "webpack": "^1.12.6",
-    "webpack-dev-server": "^1.12.1"
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.15.1",
+    "webpack-server": "^0.1.2"
   },
   "devDependencies": {
-    "babel-core": "^6.1.21",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18"
+    
   }
 }
